--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.11.0",
-    "@supabase/supabase-js": "^2.40.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.4",
     "next": "^15.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.51.0",
+    "react-hook-form": "^7.62.0",
     "server-only": "^0.0.1",
-    "twilio": "^4.23.0",
     "validator": "^13.15.15",
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@prisma/client": "^6.14.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "@types/validator": "^13.11.9",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "i": "^0.3.7",
+    "npm": "^11.5.2",
     "postcss": "^8",
-    "prisma": "^5.22.0",
+    "prisma": "^6.14.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
