--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/forms": "^0.5.7",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.4",
